--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </a>
           </div>
           <div class="student-card" id="madeline-stark-card">
-            <a href="students/madeline-stark.html">
+            <a href="https://i.imgur.com/3IKDCJr.jpg">
               <div class="view-profile-div">
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
