--- a/students/madeline-stark.html
+++ b/students/madeline-stark.html
@@ -16,7 +16,7 @@
       </header>
       <div class="profile-banner" id="madeline-stark-cover"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="#madeline-stark-card"></div>
+        <div class="profile-photo" id="madeline-stark-card"></div>
         <div class="social-icon-container">
           <a href="www.linkedin.com/in/madeline-stark-940846149"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="https://github.com/Madeline-Stark"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
