automatically backed up by learn

--- a/students/madeline-stark.html
+++ b/students/madeline-stark.html
@@ -46,7 +46,7 @@
             </div>
             <div class="description-holder">
               <h4>UCLA</h4>
-              <h5>B.A. English, Minor in Film, Television, and Digital Media</h5>
+              <h5>Bachelor of Arts in English, Minor in Film, Television, and Digital Media</h5>
             </div>
           </div>
         </div>
